--- a/.github/workflows/push_action_develop.yaml
+++ b/.github/workflows/push_action_develop.yaml
@@ -9,7 +9,7 @@ on:
 jobs:
   push_develop:
     name: push develop
-    if: ${{ github.repository_owner == 'gongnyaa' }}
+    #if: ${{ github.repository_owner == 'gongnyaa' }}
     runs-on: ubuntu-latest
     env:
       FREEDOM_CREATORS_API_TOKEN_GITHUB: ${{ secrets.API_TOKEN }}
