--- a/.github/workflows/push_action_develop.yaml
+++ b/.github/workflows/push_action_develop.yaml
@@ -12,7 +12,7 @@ jobs:
     #if: ${{ github.repository_owner == 'gongnyaa' }}
     runs-on: ubuntu-latest
     env:
-      FREEDOM_CREATORS_API_TOKEN_GITHUB: ${{ secrets.API_TOKEN }}
+      FREEDOM_CREATORS_API_TOKEN_GITHUB: ${{ secrets.GITHUB_TOKEN }}
       #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v2
