--- a/.github/workflows/push_action_develop.yaml
+++ b/.github/workflows/push_action_develop.yaml
@@ -17,12 +17,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
-          git config --global user.name 'gongnyaa'
+          git config --global user.name 'a'
           git config --global user.email 'kaneko.teruaki@gmail.com'
 
           git remote -v
 
-          echo $FREEDOM_CREATORS_API_TOKEN_GITHUB
+          echo $GITHUB_TOKEN
 
           git remote set-url origin https://estellise-yukihime:$GITHUB_TOKEN@github.com/snow-eigo/sample-action-destination.git
 
