--- a/.github/workflows/push_action_develop.yaml
+++ b/.github/workflows/push_action_develop.yaml
@@ -18,8 +18,8 @@ jobs:
     steps:
       #- uses: actions/checkout@v2
       - run: |
-          git clone https://estellise-yukihime:$API_TOKEN@github.com/snow-eigo/sample-action.git
-          git clone https://estellise-yukihime:$API_TOKEN@github.com/snow-eigo/sample-action-destination.git
+          git clone https://estellise-yukihime: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@github.com/snow-eigo/sample-action.git
+          git clone https://estellise-yukihime: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@github.com/snow-eigo/sample-action-destination.git
 
           cd sample-action
 
