--- a/.github/workflows/push_action_develop.yaml
+++ b/.github/workflows/push_action_develop.yaml
@@ -13,13 +13,13 @@ jobs:
     runs-on: ubuntu-latest
     env:
       #FREEDOM_CREATORS_API_TOKEN_GITHUB: ${{ secrets.GITHUB_TOKEN }}
-      API_TOKEN: ${{ secrets.API_TOKEN }}
+      REPO_TOKEN_SAMP: ${{ secrets.REPO_TOKEN_SAMP }}
       #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       #- uses: actions/checkout@v2
       - run: |
-          git clone https://estellise-yukihime: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@github.com/snow-eigo/sample-action.git
-          git clone https://estellise-yukihime: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@github.com/snow-eigo/sample-action-destination.git
+          git clone https://estellise-yukihime:$REPO_TOKEN_SAMP@github.com/snow-eigo/sample-action.git
+          git clone https://estellise-yukihime:$REPO_TOKEN_SAMP@github.com/snow-eigo/sample-action-destination.git
 
           cd sample-action
 
@@ -28,9 +28,9 @@ jobs:
 
           git remote -v
 
-          echo $API_TOKEN
+          echo "$API_TOKEN"
 
-          git remote set-url origin https://estellise-yukihime:$API_TOKEN@github.com/snow-eigo/sample-action-destination.git
+          git remote set-url origin https://estellise-yukihime:$REPO_TOKEN_SAMP@github.com/snow-eigo/sample-action-destination.git
 
           git remote -v
 
