--- a/.github/workflows/push_action_develop.yaml
+++ b/.github/workflows/push_action_develop.yaml
@@ -21,10 +21,11 @@ jobs:
           #git clone https://estellise-yukihime:$REPO_TOKEN_SAMP@github.com/snow-eigo/sample-action-destination.git
       - run: |
           git branch
+          git remote -v
 
           git config --global user.name 'estellise-yukihime'
           git config --global user.email 'shiranoyukihime@gmail.com'
 
           git remote set-url origin https://estellise-yukihime:$REPO_TOKEN_SAMP@github.com/snow-eigo/sample-action-destination.git
 
-          git push origin
+          git push origin action/push_develop
