--- a/.github/workflows/push_action_develop.yaml
+++ b/.github/workflows/push_action_develop.yaml
@@ -16,10 +16,13 @@ jobs:
       REPO_TOKEN_SAMP: ${{ secrets.REPO_TOKEN_SAMP }}
       #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
-      - uses: actions/checkout@v2
-          #git clone https://estellise-yukihime:$REPO_TOKEN_SAMP@github.com/snow-eigo/sample-action.git
-          #git clone https://estellise-yukihime:$REPO_TOKEN_SAMP@github.com/snow-eigo/sample-action-destination.git
+      #- uses: actions/checkout@v2
       - run: |
+          git clone https://estellise-yukihime:$REPO_TOKEN_SAMP@github.com/snow-eigo/sample-action.git
+          git clone https://estellise-yukihime:$REPO_TOKEN_SAMP@github.com/snow-eigo/sample-action-destination.git
+
+          cd sample-action
+
           git branch
           git remote -v
 
@@ -28,4 +31,5 @@ jobs:
 
           git remote set-url origin https://estellise-yukihime:$REPO_TOKEN_SAMP@github.com/snow-eigo/sample-action-destination.git
 
+          git checkout action/push_develop
           git push origin action/push_develop
