--- a/.github/workflows/push_action_develop.yaml
+++ b/.github/workflows/push_action_develop.yaml
@@ -29,5 +29,7 @@ jobs:
 
           git remote add upstream https://estellise-yukihime:$REPO_TOKEN_SAMP@github.com/snow-eigo/sample-action-destination.git
 
+          git remote -v
+
           git push upstream action/push_develop
       # git checkout action/push_develop
