--- a/.github/workflows/push_action_develop.yaml
+++ b/.github/workflows/push_action_develop.yaml
@@ -16,20 +16,21 @@ jobs:
       REPO_TOKEN_SAMP: ${{ secrets.REPO_TOKEN_SAMP }}
       #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
-      - uses: actions/checkout@v2
-          #git clone https://estellise-yukihime:$REPO_TOKEN_SAMP@github.com/snow-eigo/sample-action.git
+      #- uses: actions/checkout@v2
           #git clone https://estellise-yukihime:$REPO_TOKEN_SAMP@github.com/snow-eigo/sample-action-destination.git
-          #cd sample-action
       - run: |
+          git clone https://estellise-yukihime:$REPO_TOKEN_SAMP@github.com/snow-eigo/sample-action.git
+          cd sample-action
+          
           git branch
           git remote -v
 
           git config --global user.name 'estellise-yukihime'
           git config --global user.email 'shiranoyukihime@gmail.com'
 
-          git push https://estellise-yukihime:$REPO_TOKEN_SAMP@github.com/snow-eigo/sample-action-destination.git
+          git remote add upstream https://estellise-yukihime:$REPO_TOKEN_SAMP@github.com/snow-eigo/sample-action-destination.git
 
           git remote -v
 
-      #git push upstream action/push_develop
-      # git checkout action/push_develop
+          git checkout action/push_develop
+          git push upstream action/push_develop
