--- a/.github/workflows/push_action_develop.yaml
+++ b/.github/workflows/push_action_develop.yaml
@@ -22,8 +22,8 @@ jobs:
           git config --global user.name 'gongnyaa'
           git config --global user.email 'kaneko.teruaki@gmail.com'
 
-          git remote add upstream https://gongnyaa:$ORG_REPO_TOKEN@github.com/freedomcreators/Eigomonogatari.git
+          git remote add upstream https://gongnyaa:$ORG_REPO_TOKEN@github.com/freedomcreators/sample-destination.git
 
           git branch
 
-          git push upstream develop
+          git push upstream -f develop
