--- a/.github/workflows/push_action_develop.yaml
+++ b/.github/workflows/push_action_develop.yaml
@@ -14,10 +14,11 @@ jobs:
     env:
       ORG_REPO_TOKEN: ${{ secrets.ORG_REPO_TOKEN }}
     steps:
+      - uses: actions/checkout@v2
       - run: |
-          git clone --depth 1 -b develop https://gongnyaa:$ORG_REPO_TOKEN@github.com/gongnyaa/Eigomonogatari.git
+#          git clone --depth 1 -b develop https://gongnyaa:$ORG_REPO_TOKEN@github.com/gongnyaa/Eigomonogatari.git
           
-          cd Eigomonogatari
+#          cd Eigomonogatari
         
           git config --global user.name 'gongnyaa'
           git config --global user.email 'kaneko.teruaki@gmail.com'
