--- a/.github/workflows/push_action_develop.yaml
+++ b/.github/workflows/push_action_develop.yaml
@@ -14,15 +14,14 @@ jobs:
     env:
       ORG_REPO_TOKEN: ${{ secrets.ORG_REPO_TOKEN }}
     steps:
-      - uses: actions/checkout@v2
-#          git clone --depth 1 -b develop https://gongnyaa:$ORG_REPO_TOKEN@github.com/gongnyaa/Eigomonogatari.git
-#          cd Eigomonogatari
       - run: |
+          git clone --depth 1 -b develop https://gongnyaa:$ORG_REPO_TOKEN@github.com/gongnyaa/Eigomonogatari.git
+          
+          cd Eigomonogatari
+        
           git config --global user.name 'gongnyaa'
           git config --global user.email 'kaneko.teruaki@gmail.com'
 
           git remote add upstream https://gongnyaa:$ORG_REPO_TOKEN@github.com/freedomcreators/Eigomonogatari.git
 
-          git branch
-
-          git push upstream -f action/push_develop
+          git push upstream develop
